[gd_scene load_steps=23 format=3 uid="uid://b2wpybdh1ferk"]

[ext_resource type="Script" uid="uid://bp7bfefpeu0jr" path="res://scripts/menu/menu.gd" id="1_037ec"]
[ext_resource type="FontFile" uid="uid://d0jfh7mj4whuv" path="res://assets/alagard-12px-unicode.ttf" id="2_y1o0p"]
[ext_resource type="PackedScene" uid="uid://ch3jfe1ssj3ob" path="res://scenes/menu/back_ground.tscn" id="3_r8yej"]
[ext_resource type="Script" uid="uid://bhog1fu2i8why" path="res://scripts/audio_stream_player_2d.gd" id="4_3y2rt"]
[ext_resource type="Script" uid="uid://bb4hwgr0x84d2" path="res://scenes/menu/master.gd" id="4_t0a87"]
[ext_resource type="Script" uid="uid://bsekc1jg1is1f" path="res://scenes/menu/music.gd" id="4_y1o0p"]
[ext_resource type="Script" uid="uid://cs2d1u6lr6dou" path="res://scenes/menu/sound_fx.gd" id="6_qo0fc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lti8b"]
modulate_color = Color(0.423651, 0.423651, 0.423651, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouk20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_con2f"]
bg_color = Color(0.29219, 0.29219, 0.29219, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mae5d"]
bg_color = Color(0.834614, 0.834614, 0.834614, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hy44"]
bg_color = Color(0.509286, 0.509286, 0.509286, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lti8b"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6lef"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70i5f"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj5lg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ytvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3eks"]
bg_color = Color(0.834614, 0.834614, 0.834614, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
bg_color = Color(0.509286, 0.509286, 0.509286, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13sgg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.169245, 0.169245, 0.169245, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6lef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70i5f"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_037ec")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lti8b")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -48.0
offset_right = 250.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Continue_Button" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0.129558, 0.129559, 0.129558, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/disabled = SubResource("StyleBoxFlat_con2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hy44")
theme_override_styles/normal = SubResource("StyleBoxFlat_lti8b")
disabled = true
text = "Продолжить"

[node name="Start_Button" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hy44")
theme_override_styles/normal = SubResource("StyleBoxFlat_i6lef")
text = "Начать игру"

[node name="Options_Button" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hy44")
theme_override_styles/normal = SubResource("StyleBoxFlat_70i5f")
text = "Настройки"

[node name="Exit_Button" type="Button" parent="Menu"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ouk20")
theme_override_styles/hover = SubResource("StyleBoxFlat_mae5d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hy44")
theme_override_styles/normal = SubResource("StyleBoxFlat_mj5lg")
text = "Выход"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -320.0
offset_right = 256.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -15
theme_override_constants/shadow_offset_y = 13
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 55
text = "Тяжков 
и 
формула времени"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackGround" parent="." instance=ExtResource("3_r8yej")]

[node name="Options_menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -62.0
offset_right = 250.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Volume_Button" type="Button" parent="Options_menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ytvr")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
text = "Звук"

[node name="Video_Button" type="Button" parent="Options_menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ytvr")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
text = "Видео"

[node name="Diff_Button2" type="Button" parent="Options_menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_i6lef")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
text = "Сложность"

[node name="Back_Button" type="Button" parent="Options_menu"]
layout_mode = 2
offset_left = -250.0
offset_top = 78.0
offset_right = 250.0
offset_bottom = 120.0
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_70i5f")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
text = "Назад"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.5
offset_top = -46.0
offset_right = 203.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.08

[node name="Master" type="Label" parent="Audio/HBoxContainer/labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Звук"

[node name="Music" type="Label" parent="Audio/HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 20
text = "Музыка"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 20
text = "Звуковые эффекты"

[node name="MusicVolumeSlider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/MusicVolumeSlider"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("4_t0a87")
bus_name = "Master"

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/MusicVolumeSlider"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("4_y1o0p")
bus_name = "Music"

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/MusicVolumeSlider"]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_qo0fc")
bus_name = "Sound FX"

[node name="Back_option_Button" type="Button" parent="Audio"]
layout_mode = 0
offset_left = -48.0
offset_top = 78.0
offset_right = 40.0
offset_bottom = 120.0
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_70i5f")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
text = "Назад"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -46.0
offset_right = 97.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 1.08

[node name="Fullscreen" type="Label" parent="Video/HBoxContainer/labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Полный экран"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 20
text = "Рамки"

[node name="VSync" type="Label" parent="Video/HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 20
text = "Вертикальная синхронизация"

[node name="VBoxContainer" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Отключить"
popup/item_0/id = 0
popup/item_1/text = "Включить"
popup/item_1/id = 1
popup/item_2/text = "Адаптивный"
popup/item_2/id = 2

[node name="Back_video_Button" type="Button" parent="Video"]
layout_mode = 0
offset_left = -48.0
offset_top = 78.0
offset_right = 40.0
offset_bottom = 120.0
size_flags_vertical = 6
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y1o0p")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_70i5f")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v86rl")
theme_override_styles/normal = SubResource("StyleBoxFlat_13sgg")
text = "Назад"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("4_3y2rt")

[connection signal="pressed" from="Menu/Continue_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Menu/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Menu/Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Options_menu/VBoxContainer2/Volume_Button" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="Options_menu/VBoxContainer2/Video_Button" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="Options_menu/Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/MusicVolumeSlider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/MusicVolumeSlider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/MusicVolumeSlider/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/Back_option_Button" to="." method="_on_back_option_button_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="item_selected" from="Video/HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Video/Back_video_Button" to="." method="_on_back_video_button_pressed"]
